--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
     --white-color: #FFF;
   }
   
-  /*Fuente y tipografia*/
+  /* Fonts */
   :root {
     --body-font:'Bodoni', sans-serif;
     --h2-font-size: 1.25rem;
@@ -195,7 +195,7 @@
     z-index: var(--z-fixed);
   }
   
-  .home__slideshow {
+  .slideshow {
     position: absolute;
     top: 10%;
     left: 22%;
@@ -204,6 +204,54 @@
     z-index: var(--z-tooltip);
   }
   
+  .slideshow-item{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    opacity: 0;
+    animation: cycleImages 41s infinite;
+  }
+  
+  .slideshow-item:nth-child(1)
+  {
+    animation-delay: 0s;
+  }
+
+  .slideshow-item:nth-child(2)
+  {
+    animation-delay: 10s;
+  }
+
+  .slideshow-item:nth-child(3)
+  {
+    animation-delay: 20s;
+  }
+
+  .slideshow-item:nth-child(4){
+    animation-delay: 30s;
+  }
+
+  .slideshow-item img{
+    animation: zoom 31s infinite;
+  }
+
+     
+  @keyframes cycleImages{
+    25%{
+      opacity: 1;
+    }
+    40%{
+      opacity: 0;
+    }
+  }
+
+  @keyframes zoom{
+    100%{
+      transform: scale(1.3);
+    }
+  }
+ 
   .home__social {
     font-family: 'lato', sans-serif;
     -webkit-writing-mode: vertical-rl;
@@ -244,7 +292,7 @@
   .home__button-icon {
     padding-left: 4.25rem;
   }
-  
+
   /*----- MEDIA QUERIES -----*/
   @media screen and (min-width: 768px) {
     body {
@@ -277,7 +325,7 @@
       top: 16%;
       left: 23%;
     }
-    .home__slideshow {
+    .slideshow {
       width: 359px;
       height: 539px;
       top: 18%;
