--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -293,6 +293,100 @@
     padding-left: 4.25rem;
   }
 
+  .articles_vogue {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #FFF;
+  }
+
+  .container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1100px;
+  }
+
+  .container .card{
+    position: relative;
+    width: 320px;
+    height: 320px;
+    margin: 15px;
+    overflow: hidden;
+  }
+
+  .container .card .imgBX,
+  .container .card .contentBx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .container .card .imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .container .card .contentBx::before{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    transform: scaleX(0);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: right;
+    transition-delay: 0s;
+  }
+
+  .container .card:hover .contentBx::before{
+    transform: scaleX(1);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: left;
+    transition-delay: 0.5s;
+  }
+
+  .container .card .contentBx{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container .card .contentBx .content{
+    position: relative;
+    padding: 30px;
+    z-index: 1;
+    transition: 0.5s;
+    transform: translateX(-300px);
+    transition-delay: 0s;
+  }
+
+  .container .card:hover .contentBx .content{
+    transform: translateX(0px);
+  }
+
+  .container .card .contentBx .content h3{
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  .container .card .contentBx .content p{
+    font-size: 1em;
+    line-height: 1.4em;
+    font-weight: 300;
+  }
+
   /*----- MEDIA QUERIES -----*/
   @media screen and (min-width: 768px) {
     body {
@@ -342,6 +436,7 @@
       padding-right: 8rem;
     }
   }
+   
   
   @media screen and (min-width: 1200px) {
     .bd-grid {
